In search, the first app opened is subsequently opened in place of other apps.
When searching, you often get a list of apps relevant to your search. However, the first app you click to see details about is incorrectly remembered when trying to view other app's details.
- Search for any string that gives > 1 apps.
- Select the first result and click it.
- Once the page has loaded go back and then select another app.
- Notice you get the page of the first app which is incorrect.
When the app selected in step 3 is already installed this doesn't seem to occur.
Fedora 35.
Edited by Vincent Chernin