gs-details-page: Cancel ongoing app details load when switching app

Cancel any ongoing app details load when switching to a different app,
thus any slow responses won't overwrite page content. That could happen
when the lookup for app alternatives took too long. Once finished, it
could change the selected app from the returned list, which was not
relevant to the currently selected app.

Closes https://gitlab.gnome.org/GNOME/gnome-software/-/issues/1529